<resources>
    <string name="app_name">음악 삶을\n만나다</string>
    <string name="title">음악, 삶을 만나다</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="open_drawer">open_drawer world!</string>
    <string name="close_drawer">close_drawer</string>
    <string name="login">아이디</string>
    <string name="pass">비밀번호</string>
    <string name="login_success">로그인 되었습니다.</string>
    <string name="logout_success">로그아웃 되었습니다.</string>
    <string name="logout_asking">로그아웃 하시겠습니까?</string>
    <string name="main_top_login">로그인을 해주세요</string>
    <string name="main_sub_login">로그인 / 회원가입</string>
    <string name="main_sub_logout">로그아웃</string>
    <string name="exit">뒤로가기 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="error">오류</string>
    <string name="language">English version</string>
    <string name="admin">관리자 모드</string>
    <string name="general">Upload List</string>
    <string name="maintext1">음악,</string>
    <string name="maintext2">삶을 만나다.</string>
    <string name="voice_start">녹음 시작</string>
    <string name="voice_save">에 저장되었습니다</string>
    <string name="voice_max">녹음은 최대 3분입니다</string>
    <string name="voice_send">전송중입니다...시간이 다소 걸릴수 있습니다. 2~5분정도 소요됩니다.</string>
    <string name="service1">서비스 이용 약관</string>
    <string name="service2">개인정보 수집 및 이용안내</string>
    <string name="service1check">서비스 이용약관에 동의해 주십시오.</string>
    <string name="service2check">개인정보 수집 및 이용안내에 동의해 주십시오.</string>
    <string name="agree">예, 동의합니다</string>
    <string name="pass_hint"> 8자 이상</string>
    <string name="confirm_hint"> 비밀번호 확인</string>
    <string name="join_success">회원가입 완료</string>
    <string name="join_detail">회원 정보 입력</string>
    <string name="video">동영상 촬영은 기본 가로 모드 촬영입니다.\n촬영은 최대 2분까지 가능합니다.</string>
    <string name="video_start">동영상 촬영은 최대 2분까지 가능합니다.</string>
    <string name="video_end">촬영을 종료합니다.</string>
    <string name="mystudio_login">로그인 먼저 해주십시오.\n로그인 창으로 이동하시겠습니까?</string>
    <string name="delete_asking">삭제 하시겠습니까?</string>
    <string name="choice">선택한 파일이 없습니다.</string>
    <string name="share">공유하기</string>
    <string name="select">선택</string>
    <string name="subject">제목</string>
    <string name="contents">내용</string>
    <string name="dialog_message">Wi-Fi 망이 아닐시에 데이터요금이 부가될수 있습니다.</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="downloadsize">\n 다운로드 사이즈 : </string>
    <string name="serial_success">시리얼 넘버가 확인되었습니다.</string>
    <string name="noselectmusic">음악을 선택해 주세요.</string>
    <string name="start_rec">촬영을 시작합니다.</string>
    <string name="stop_rec">촬영을 종료합니다.</string>
    <string name="no_path">뮤직비디오를 촬영해 주세요.</string>
    <string name="connection_error">서버와의 연결이 끊어졌습니다. 잠시후에 다시 연결하세요.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="notice1">
     1. 수집회사 및 연락처 \n
- 회사명 : 주식회사 시에프코리아\n
- 연락처 : 031) 819-9449\n
※ 상담시간 : 월요일~금요일(09:00~18:00), 토/일/공휴일 휴무\n
※ 점심시간 (12:00~13:00)은 전화상담 불가 \n
2. 수집하는 개인정보 항목 및 수집방법\n
회사는 원활한 고객상담, 각종 서비스 제공, 데이터 통계 등을 위해 아래와 같은 개인정보를 수집하고 있습니다.\n
가. 일반수집항목 \n
① 휴대전화번호, 어플리케이션 서비스 이용기록, 접속 로그 및 인증일자, 결제기록, 어플리케이션 버전, 통신사정보, 단말기 정보(모델명, 가용 메모리 및 파일사이즈, OS버전, 기기고유식별번호 등)\n
나. 개인정보 수집방법\n
회사는 어플리케이션 다운로드 후 최초 실행 시 또는 어플리케이션 이용 중이나 네트워크 접속 시 해당 개인정보를 수집하며, 일부 개인정보는 특정 어플리케이션 또는 특정 서비스에 가입할 경우에만 수집합니다.\n
\n
3. 개인정보의 수집 및 이용목적\n 
회사는 수집한 개인정보를 다음의 목적을 위해 고지한 범위 내에서 사용 및 활용하며, 원칙적으로 이용자의 사전 동의 없이는 동 범위를 초과하여 이용하거나 이용자의 개인정보를 외부에 공개하지 않습니다. (단 이용자가 사전에 개인정보 공개에 대하여 동의한 경우와 법령의 규정에 의거하거나 수사 목적으로 법령에 정해진 절차와 방법에 따라 수사기관의 요구가 있는 경우에는 외부에 공개할 수 있습니다.)\n 
가. 서비스 이용에 따른 본인확인, 개인식별, 불량고객의 부정이용 방지와 비인가 사용방지, 인증의사 확인, 분쟁조정을 위한 기록보존, 불만처리 등 민원처리, 고지사항 전달\n
나. 신규 서비스 개발, 통계학적 특성에 따른 서비스 제공 및 광고 게재, 서비스의 유효성 확인, 이벤트 및 광고성 정보 제공 및 참여기회 제공, 접속빈도 파악, 고객의 서비스 이용에 대한 통계\n 
\n
5. 개인정보의 보유 및 이용기간\n 
가. 원칙적으로 개인정보 수집 및 이용 목적이 달성된 후에는 해당 정보를 지체 없이 파기합니다. 단, 관계법령의 규정에 의하여 보존할 필요가 있는 경우 회사는 아래에서 정한 일정한 기간 동안 개인정보를 보관합니다.\n
\n
나. 전자상거래 등에서의 소비자보호에 관한 법률 등 관계법령의 규정에 의하여 보존할 필요가 있는 경우 회사는 관계법령에서 정한 일정한 기간 동안 고객 정보를 보관합니다. 이 경우 회사는 보관하는 정보를 그 보관의 목적으로만 이용하며 보존기간은 아래와 같습니다.\n
\n
표시/광고에 관한 기록\n 
보존 이유 : 전자상거래 등에서의 소비자보호에 관한 법률\n 
보존 기간 : 6개월\n 
계약 또는 청약철회 등에 관한 기록\n 
보존 이유 : 전자상거래 등에서의 소비자보호에 관한 법률\n 
보존 기간 : 5년\n 
대금결제 및 재화 등의 공급에 관한 기록\n 
보존 이유 : 전자상거래 등에서의 소비자보호에 관한 법률\n 
보존 기간 : 5년 \n
소비자의 불만 또는 분쟁처리에 관한 기록\n 
보존 이유 : 전자상거래 등에서의 소비자보호에 관한 법률\n 
보존 기간 : 3년 \n
방문에 관한 기록 \n
보존 이유 : 통신비밀보호법\n 
보존 기간 : 3개월\n
\n
6. 서비스 이용의 제한\n
회사는 원활한 어플리케이션 서비스 제공을 위하여 제2조의 개인정보를 수집할 수 있습니다. 이용자가 회사 의 개인정보 수집을 거부하는 경우 회사가 제공하는 어플리케이션 서비스의 전부 또는 일부의 이용에 제한이 있을 수 있습니다.\n
    </string>
</resources>