<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000" 
    >

    <LinearLayout 
       	android:layout_width="match_parent"
       	android:layout_height="wrap_content"
       	android:orientation="vertical"
        >
        <LinearLayout 
	       	android:layout_width="match_parent"
	       	android:layout_height="200dp"
	       	android:orientation="vertical"
	       	android:gravity="right"
	       	android:layout_marginTop="20dp"
	       	android:layout_marginRight="10dp"
        	>
        	<TextView 
	            android:id="@+id/user3"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:textColor="#ffffff"
	            android:textSize="16dp" 
	            android:textStyle="bold"
	            android:text="@string/main_top_login"
	            />
        	<TextView 
	            android:id="@+id/lan"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:textSize="16dp" 
	            android:text="@string/language"
	            android:layout_marginTop="10dp"
	            android:textColor="@android:color/holo_red_dark"
	            android:visibility="gone"
	            />
	        	<LinearLayout 
	        	    android:layout_height="wrap_content"
	            	android:layout_width="wrap_content"
	            	android:orientation="horizontal"
	        	    >
		        	<ImageView 
		        	    android:id="@+id/loginimage"
		        		    android:layout_width="17dp"
				       		android:layout_height="17dp"
				       		android:src="@drawable/img_drowbar_icon_login"
				       		android:layout_marginRight="5dp"
				       		android:visibility="gone"
		        		    />
		        	<TextView 
			            android:id="@+id/user"
			            android:layout_height="wrap_content"
			            android:layout_width="wrap_content"
			            android:textColor="#ffffff"
			            android:visibility="gone"
			            android:textSize="16dp" 
			            />
	        	</LinearLayout>
	        	<LinearLayout
	        	   	android:layout_width="match_parent"
		       		android:layout_height="match_parent"
		       		android:orientation="vertical"
		       		android:layout_marginTop="20dp"
		       		android:layout_marginLeft="20dp">
		        	<TextView 
			            android:layout_width="wrap_content"
				       	android:layout_height="wrap_content"
				       	android:text="@string/maintext1"
				       	android:textSize="30dp"
				       	android:textColor="#fff"
				       	android:gravity="center"
				       	android:layout_gravity="left"
				       	android:textStyle="bold"
		            />
		        	<TextView 
			            android:layout_width="wrap_content"
				       	android:layout_height="wrap_content"
				       	android:text="@string/maintext2"
				       	android:textSize="30dp"
				       	android:gravity="center"
				       	android:layout_gravity="left"
				       	android:textColor="@android:color/darker_gray"
		            />
	        	</LinearLayout>
	        </LinearLayout>
	        
	        <LinearLayout 
		       	android:layout_width="match_parent"
		       	android:layout_height="wrap_content"
		       	android:orientation="horizontal"
		       	android:layout_gravity="center"
		       	android:layout_marginBottom="10dp"
		       	android:layout_marginLeft="10dp"
        		>
        		
	        	<AdapterViewFlipper
			        android:id="@+id/viewFlipper"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:flipInterval="2000"
			        android:visibility="gone"
		        />
	        </LinearLayout>
    	
        <GridView
        android:id="@+id/maingrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:numColumns="2"
        android:scrollbars="none"
        android:listSelector="#00ff0000"
        android:drawSelectorOnTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        />
<!--     <TableLayout  -->
<!-- 	        android:layout_width="match_parent" -->
<!--         	android:layout_height="wrap_content" -->
<!--         	android:background="@null" -->
<!--         	android:layout_margin="7dp" -->
<!-- 	        > -->
	        
<!--         <TableRow > -->
<!-- 		    <com.CFKorea.pbc.Activity.SquareButton -->
<!-- 		        android:id="@+id/videorecording" -->
<!-- 		        android:layout_width="0dp" -->
<!-- 		   	 	android:layout_height="match_parent" -->
<!-- 		   	 	android:background="@drawable/btn_videorecording" -->
<!-- 		   	 	android:layout_weight="1" -->
<!-- 		   	 	android:layout_margin="7dp" -->
<!-- 		        /> -->
<!-- 		    <com.CFKorea.pbc.Activity.SquareButton -->
<!-- 		        android:id="@+id/voicerecording" -->
<!-- 		        android:layout_width="0dp" -->
<!-- 		   	 	android:layout_height="match_parent" -->
<!-- 		   	 	android:background="@drawable/btn_voicerecording" -->
<!-- 		   	 	android:layout_weight="1" -->
<!-- 		   	 	android:layout_margin="7dp" -->
<!-- 		        /> -->
<!-- 	    </TableRow> -->
	    
<!-- 	    <TableRow > -->
<!-- 	      <com.CFKorea.pbc.Activity.SquareButton -->
<!-- 	        android:id="@+id/my" -->
<!-- 	        android:layout_width="0dp" -->
<!-- 	   	 	android:layout_height="match_parent" -->
<!-- 	   	 	android:background="@drawable/btn_mystudio" -->
<!-- 	   	 	android:layout_weight="1" -->
<!-- 	   	 	android:layout_margin="7dp" -->
<!-- 	        /> -->
<!-- 	    <com.CFKorea.pbc.Activity.SquareButton -->
<!-- 	        android:id="@+id/Qna" -->
<!-- 	        android:layout_width="0dp" -->
<!-- 	   	 	android:layout_height="match_parent" -->
<!-- 	   	 	android:background="@drawable/btn_homepage" -->
<!-- 	   	 	android:layout_weight="1" -->
<!-- 	   	 	android:layout_margin="7dp" -->
<!-- 	        />   -->
<!-- 	    </TableRow> -->
<!--     </TableLayout> -->
    </LinearLayout>
    <!-- left drawer start-->
	<LinearLayout
        android:id="@+id/drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#AA0f3c77"
        android:orientation="vertical"
        
        >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1" 
            >
	            <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="Welcome To PBC RADIO"
	            android:textColor="#fff"
	            android:textSize="30dp"
	            android:textStyle="bold"
	            android:layout_gravity="center"
	            />
            
        </LinearLayout>
        
        <ListView
		    android:id="@+id/left_ListView"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_gravity="start"
		    android:dividerHeight="0px"
        	android:divider="@null"
        	android:background="@null"
		    android:layout_weight="1" />
         <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_weight="1" 
            android:orientation="vertical"
            >
	            <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="30dp"
	            android:text="(주) C F K O R E A"
	            android:textColor="#fff"
	            android:textSize="18dp"
	            />
	            <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="30dp"
	            android:text="E-MAIL"
	            android:textColor="#fff"
	            />
	            <TextView
	            android:layout_width="wrap_content"
	            android:layout_marginLeft="30dp"
	            android:layout_height="wrap_content"
	            android:text="RAIN489@CFTOWN.CO.KR"
	            android:textColor="#fff"
	            />
            
        </LinearLayout>
    </LinearLayout>
	<!-- left drawer end-->
	
</android.support.v4.widget.DrawerLayout>