<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/joinmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_login_background"
    >

    <FrameLayout
        android:id="@+id/player_header_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        >

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:background="@null"
            android:src="@drawable/back" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical" 
        android:layout_marginTop="50dp"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_detail"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal" 
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="ID"
                android:textColor="#fff"
                android:textSize="7pt" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/joinid"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="#fff"
                android:hint=" email"
                android:inputType="textEmailAddress" 
                android:lines="1"
                android:singleLine="true" 
                android:maxLength="30"
                android:nextFocusDown="@+id/joinpass">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="PASSWORD"
                android:textColor="#fff"
                android:textSize="7pt" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/joinpass"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="#fff"
                android:hint="@string/pass_hint"
                android:inputType="textPassword"
                android:lines="1"
                android:singleLine="true" 
                android:maxLength="20"
                android:nextFocusDown="@+id/joinpass2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="CONFIRM"
                android:textColor="#fff"
                android:textSize="7pt" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/joinpass2"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="#fff"
                android:inputType="textPassword"
                android:lines="1"
                android:hint="@string/confirm_hint"
                android:singleLine="true" 
                android:maxLength="20"
                android:nextFocusDown="@+id/joinname"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="NAME"
                android:textColor="#fff"
                android:textSize="7pt" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/joinname"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="#fff"
                android:lines="1"
                android:singleLine="true" 
                android:maxLength="10"
                android:nextFocusDown="@+id/jointel"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="PHONE"
                android:textColor="#fff"
                android:textSize="7pt" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            
			<LinearLayout
			    android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="10dp"
			    >
            	<EditText
               		android:id="@+id/jointel"
                	android:layout_width="50dp"
                	android:layout_height="wrap_content"
                	android:background="#fff"
                	android:lines="1"
                	android:inputType="number"
                	android:maxLength="3"/>
				<View
	                android:layout_width="0dp"
	                android:layout_height="0dp"
	                android:layout_weight="1" />
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="-" />
				<View
	                android:layout_width="0dp"
	                android:layout_height="0dp"
	                android:layout_weight="1" />
	            <EditText
	                android:id="@+id/jointel2"
	                android:layout_width="50dp"
	                android:layout_height="wrap_content"
	                android:background="#fff"
	                android:lines="1"
	                android:inputType="number"
	                android:maxLength="4"/>
				<View
	                android:layout_width="0dp"
	                android:layout_height="0dp"
	                android:layout_weight="1" />
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="-" />
				<View
	                android:layout_width="0dp"
	                android:layout_height="0dp"
	                android:layout_weight="1" />
	            <EditText
	                android:id="@+id/jointel3"
	                android:layout_width="50dp"
	                android:layout_height="wrap_content"
	                android:background="#fff"
	                android:lines="1"
	                android:inputType="number"
	                android:maxLength="4"
	                />
            </LinearLayout>
        </LinearLayout>
    

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        >

        <ImageButton
            android:id="@+id/btncancel"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/cancelbutton" />

        <ImageButton
            android:id="@+id/btnok"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:background="@drawable/joinbutton" />
    </LinearLayout>
</LinearLayout>
</RelativeLayout>